force-app/main/default/objects/Parsed_Document__c/Parsed_Document__c.object-meta.xml
<CustomObject>
    <description>Stores values extracted from uploaded PDF documents.</description>
    <label>Parsed Document</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Parsed Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parsed Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>