force-app/main/default/objects/Parsed_Document__c/fields/Extracted_Text__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Text__c</fullName>
    <label>Extracted Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>