force-app/main/default/objects/Parsed_Document__c/fields/Invoice_Date_Raw__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Raw__c</fullName>
    <label>Invoice Date (Raw)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>