force-app/main/default/objects/Parsed_Document__c/fields/Parsing_Status__c.field-meta.xml
<CustomField>
    <fullName>Parsing_Status__c</fullName>
    <label>Parsing Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>